// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic > basic operations 1`] = `
<div>
  <div>
    0
  </div>
  <div>
    2
  </div>
  <div>
    5
  </div>
  <div>
    2
  </div>
  
</div>
`;

exports[`basic > handles boolean attributes with no prop value provides 1`] = `
<div>
  <div
    class="container"
  >
    <button
      disabled=""
    >
      Button
    </button>
    <input
      checked=""
      type="checkbox"
    />
  </div>
  
</div>
`;

exports[`basic > render semi-dynamic text 1`] = `
<div>
  <div>
    Hello World
  </div>
  
</div>
`;

exports[`basic > render spread props without duplication 1`] = `
<div>
  <div>
    <input
      id="vehicle1"
      name="car"
      type="checkbox"
      value="Bike"
    />
  </div>
  
</div>
`;

exports[`basic > render static attributes 1`] = `
<div>
  <div
    class="foo"
    id="bar"
    style="color: red;"
  >
    Hello World
  </div>
  
</div>
`;

exports[`basic > render static text 1`] = `
<div>
  <div>
    Hello World
  </div>
  
</div>
`;

exports[`basic > renders simple JS expression logic correctly 1`] = `
<div>
  <div>
    {"0":"Test"}
  </div>
  <div>
    1
  </div>
  
</div>
`;
